Add page with android app download and version history

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -14,5 +14,7 @@
     "Whoops! Something went wrong.": "Произошла ошибка.",
     "Social network for athletes": "Социальная сеть для спортсменов",
     "Zdrava android app": "Zdrava для android",
-    "Learn more": "Подробнее"
+    "Learn more": "Подробнее",
+    "Version history": "История версий",
+    "Download Zdrava :version for android": "Скачать Zdrava :version для android"
 }
