--- a/lang/ru.json
+++ b/lang/ru.json
@@ -5,7 +5,7 @@
     "First name": "Ваше имя",
     "Last name": "Ваша фамилия",
     "Login": "Вход",
-    "Logout": "Выход",
+    "Logout": "Выйти",
     "Remember me": "Запомнить меня",
     "Subscribe to our newsletter": "Я хочу получать письма с новостями",
     "Sign up for free": "Зарегистрируйся бесплатно",
