--- a/lang/ru.json
+++ b/lang/ru.json
@@ -16,5 +16,9 @@
     "Zdrava android app": "Zdrava для android",
     "Learn more": "Подробнее",
     "Version history": "История версий",
-    "Download Zdrava :version for android": "Скачать Zdrava :version для android"
+    "Download Zdrava :version for android": "Скачать Zdrava :version для android",
+    "Settings": "Настройки",
+    "My profile": "Мой профиль",
+    "My account": "Мой аккаунт",
+    "Privacy": "Конфиденциальность"
 }
