Update login and registration pages

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -33,5 +33,11 @@
     "File": "Файл",
     "megabyte": "мегабайт",
     "Manually add": "Добавить вручную",
-    "Upload and sync workouts": "Загрузить и синхронизировать тренировки"
+    "Upload and sync workouts": "Загрузить и синхронизировать тренировки",
+    "alpha test": "альфа-тест",
+    "Try Zdrava.": "Попробуйте Zdrava.",
+    "We already have :count people": "С нами уже :count человек(а)",
+    "Already with us?": "Уже с нами?",
+    "Welcome back!": "С возвращением!",
+    "We're miss you": "Мы скучали по вам"
 }
