Support multiple GPX/FIT/TCX files upload. Add info from uploaded GPX to DB

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -39,5 +39,6 @@
     "We already have :count people": "С нами уже :count человек(а)",
     "Already with us?": "Уже с нами?",
     "Welcome back!": "С возвращением!",
-    "We're miss you": "Мы скучали по вам"
+    "We're miss you": "Мы скучали по вам",
+    "Workout": "Тренировка"
 }
