Update workout view page

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -54,6 +54,10 @@
     "Share": "Поделиться",
     ":distance km": ":distance км",
     ":elevation m": ":elevation м",
+    "Elevation": "Высота",
+    "Duration": "Время",
+    ":speed km/h": ":speed км/ч",
+    "Avg. speed": "Срд. скорость",
     "Workouts: :count": "Тренировок: :count",
     "upload files": "загрузите файлы",
     "Workouts not found. Record one using :zdrava-app or :upload manually": "Тренировки не найдены. Запишите их с помощью :zdrava-app или :upload вручную",
