Map in workout view page, update workout uploading code

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -56,8 +56,10 @@
     ":elevation m": ":elevation м",
     "Elevation": "Высота",
     "Duration": "Время",
+    "Duration total": "Общее время",
     ":speed km/h": ":speed км/ч",
-    "Avg. speed": "Срд. скорость",
+    "Avg. speed": "Ср. скорость",
+    "Max. speed": "Макс. скорость",
     "Workouts: :count": "Тренировок: :count",
     "upload files": "загрузите файлы",
     "Workouts not found. Record one using :zdrava-app or :upload manually": "Тренировки не найдены. Запишите их с помощью :zdrava-app или :upload вручную",
