--- a/lang/ru.json
+++ b/lang/ru.json
@@ -27,7 +27,7 @@
     "or": "или",
     "max.": "макс.",
     "Submit": "Отправить",
-    "Public profile": "Публичный профиль",
+    "Private profile": "Закрытый профиль",
     "File Upload successfully": "Файл успешно загружен",
     "Ensure that these requirements are met:": "Обнаружена одна или несколько ошибок:",
     "The avatar field is required.": "Новый аватар не выбран",
@@ -68,5 +68,9 @@
     "Overview": "Обзор",
     "Analysis": "Анализ",
     "Interface language": "Язык интерфейса",
-    "Save": "Сохранить"
+    "Save": "Сохранить",
+    "Photo": "Фотография",
+    "First name": "Имя",
+    "Last name": "Фамилия",
+    "Nickname": "Ник"
 }
