Initial support for subscriptions/subscribers view

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -85,6 +85,9 @@
     "Request sent: :datetime": "Запрос отправлен: :datetime",
     "Accept": "Принять",
     "Decline": "Отклонить",
+    "My subscriptions": "Мои подписки",
+    "My subscribers": "Мои подписчики",
+    "User": "Пользователь",
     "\":user\" is now your subscriber": "Теперь \":user\" ваш подписчик",
     "Subscription request from \":user\" declined": "Запрос на подписку от \":user\" отклонён"
 }
