Download GPX button in activity view

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -91,5 +91,6 @@
     "\":user\" is now your subscriber": "Теперь \":user\" ваш подписчик",
     "Subscription request from \":user\" declined": "Запрос на подписку от \":user\" отклонён",
     "Reply": "Ответить",
-    "Like": "Нравится"
+    "Like": "Нравится",
+    "Download :file": "Скачать :file"
 }
