--- a/lang/ru.json
+++ b/lang/ru.json
@@ -92,5 +92,6 @@
     "Subscription request from \":user\" declined": "Запрос на подписку от \":user\" отклонён",
     "Reply": "Ответить",
     "Like": "Нравится",
-    "Download :file": "Скачать :file"
+    "Download :file": "Скачать :file",
+    "Telegram": "Telegram-канал"
 }
