Site: Display segments on map

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -112,5 +112,10 @@
     "Ride": "Заезд",
     "Mountain bike ride": "Горный велозаезд",
     "Walking": "Ходьба",
-    "Run": "Бег"
+    "Run": "Бег",
+    "New items": "Новинки",
+    "Explore segments": "Исследовать участки",
+    "Search segments": "Поиск участков",
+    "Search athletes": "Поиск спортсменов",
+    "Search clubs": "Клубы"
 }
