Site: Improved segments pages

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -119,5 +119,9 @@
     "Segments": "Участки",
     "Search segments": "Поиск участков",
     "Search athletes": "Поиск спортсменов",
-    "Search clubs": "Клубы"
+    "Search clubs": "Клубы",
+    "Showing": "Показаны",
+    "to": "-",
+    "of": "из",
+    "results": "результатов"
 }
