Site: Add donate buttons and QR-code to main page

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -123,5 +123,7 @@
     "Showing": "Показаны",
     "to": "-",
     "of": "из",
-    "results": "результатов"
+    "results": "результатов",
+    "Support the developer": "Поддержите разработчика",
+    "Donate with QR-code": "или отсканируйте QR-код"
 }
