SIte: Improvements in templates

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -127,5 +127,6 @@
     "results": "результатов",
     "Support the developer": "Поддержите разработчика",
     "Donate with QR-code": "или отсканируйте QR-код",
-    "Created": "Создан"
+    "Created": "Создан",
+    "Profile successfully updated": "Профиль успешно обновлён"
 }
