--- a/lang/ru.json
+++ b/lang/ru.json
@@ -8,7 +8,7 @@
     "Logout": "Выйти",
     "Remember me": "Запомнить меня",
     "Subscribe to our newsletter": "Я хочу получать письма с новостями",
-    "Sign up for free": "Зарегистрируйся бесплатно",
+    "Sign up for free": "Регистрация",
     "Sign up": "Зарегистрироваться",
     "or sign up with:": "или зарегистрироваться через:",
     "Whoops! Something went wrong.": "Произошла ошибка.",
@@ -128,5 +128,13 @@
     "Support the developer": "Поддержите разработчика",
     "Donate with QR-code": "или отсканируйте QR-код",
     "Created": "Создан",
-    "Profile successfully updated": "Профиль успешно обновлён"
+    "Profile successfully updated": "Профиль успешно обновлён",
+    "Password Reset": "Сброс пароля",
+    "Forgot your password?": "Забыли пароль?",
+    "Send Password Reset Link": "Отправить ссылку для сброса пароля",
+    "Reset Password": "Сбросить пароль",
+    "Confirm Password": "Подтверждение пароля",
+    "Your provided credentials do not match in our records": "Предоставленные вами учетные данные не совпадают с нашими записями",
+    "passwords.sent": "Мы отправили вам ссылку для сброса пароля по электронной почте.",
+    "passwords.reset": "Ваш пароль был успешно сброшен!"
 }
