Site: Search on explore segments page

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -144,5 +144,6 @@
     "You have successfully registered & logged in!": "Вы успешно зарегистрировались и вошли в систему!",
     "Comment added successfully": "Комментарий успешно добавлен",
     "Road Cycling": "Шоссейный велосипед",
-    "Download segment as FIT": "Скачать сегмент как FIT"
+    "Download segment as FIT": "Скачать сегмент как FIT",
+    "Search for segment by name": "Поиск сегмента по имени"
 }
