Site: Improve FIT files parsing, display device and firmware version in activity view

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -153,5 +153,6 @@
     "Dark": "Тёмная",
     "Actions": "Действия",
     "Android": "Андроид",
-    "Device": "Устройство"
+    "Device": "Устройство",
+    "Firmware": "Прошивка"
 }
