API: Allow crash reports from anonymous users

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -154,5 +154,6 @@
     "Actions": "Действия",
     "Android": "Андроид",
     "Device": "Устройство",
-    "Firmware": "Прошивка"
+    "Firmware": "Прошивка",
+    "Unknown": "Неизвестно"
 }
