API: User profile and subscriptions

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -155,5 +155,6 @@
     "Android": "Андроид",
     "Device": "Устройство",
     "Firmware": "Прошивка",
-    "Unknown": "Неизвестно"
+    "Unknown": "Неизвестно",
+    "User not found": "Пользователь не найден"
 }
