Site: Add privacy policy and pages footer

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -156,5 +156,10 @@
     "Device": "Устройство",
     "Firmware": "Прошивка",
     "Unknown": "Неизвестно",
-    "User not found": "Пользователь не найден"
+    "User not found": "Пользователь не найден",
+    "Download": "Скачать",
+    "Legal terms": "Юридические условия",
+    "Privacy Policy": "Политика конфиденциальности",
+    "Terms &amp; Conditions": "Условия использования",
+    "Links": "Ссылки"
 }
