Site: Account deleting page

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -161,5 +161,7 @@
     "Legal terms": "Юридические условия",
     "Privacy Policy": "Политика конфиденциальности",
     "Terms &amp; Conditions": "Условия использования",
-    "Links": "Ссылки"
+    "Links": "Ссылки",
+    "Account deleting": "Удаление аккаунта",
+    "Account deletion request": "Запрос на удаление аккаунта"
 }
