--- a/lang/ru.json
+++ b/lang/ru.json
@@ -153,7 +153,7 @@
     "Dark": "Тёмная",
     "Actions": "Действия",
     "Android": "Андроид",
-    "Device": "Устройство",
+    "Device / Application": "Устройство / Приложение",
     "Firmware": "Прошивка",
     "Unknown": "Неизвестно",
     "User not found": "Пользователь не найден",
