Site: Fix layouts. Refactoring

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -163,5 +163,6 @@
     "Terms &amp; Conditions": "Условия использования",
     "Links": "Ссылки",
     "Account deleting": "Удаление аккаунта",
-    "Account deletion request": "Запрос на удаление аккаунта"
+    "Account deletion request": "Запрос на удаление аккаунта",
+    "Privacy settings successfully updated": "Настройки конфиденциальности успешно обновлены"
 }
