Fix psalm errors

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -113,6 +113,7 @@
     "Admin panel": "Админпанель",
     "This athlete has no training yet": "У этого спортсмена пока нет тренировок",
     "Subscription requests: :count": "Запросы на подписку: :count",
+    "No new requests": "Новых запросов нет",
     "Ride": "Заезд",
     "Mountain bike ride": "Горный велозаезд",
     "Walking": "Ходьба",
