Site: Rewrite navigation bar + sidebar

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -165,5 +165,7 @@
     "Links": "Ссылки",
     "Account deleting": "Удаление аккаунта",
     "Account deletion request": "Запрос на удаление аккаунта",
-    "Privacy settings successfully updated": "Настройки конфиденциальности успешно обновлены"
+    "Privacy settings successfully updated": "Настройки конфиденциальности успешно обновлены",
+    "Navigation": "Навигация",
+    "Notifications": "Уведомления"
 }
