Site: Mobile app page

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -180,5 +180,7 @@
     "Removal request": "Запрос на удаление",
     "To prevent anyone other than you from deleting your account, you must confirm your request by email. We will send notification of the final step to": "Чтобы никто, кроме вас, не мог удалить ваш аккаунт, необходимо подтвердить запрос по электронной почте. Мы отправим уведомление о последнем этапе по адресу",
     "Your account will not be deleted until you follow the instructions in the email.": "Ваш аккаунт не будет удален, пока вы не выполните инструкции из письма.",
-    "The account and all data are deleted forever. They cannot be downloaded or restored.": "Аккаунт и все данные удаляются навсегда. Их нельзя будет скачать или восстановить."
+    "The account and all data are deleted forever. They cannot be downloaded or restored.": "Аккаунт и все данные удаляются навсегда. Их нельзя будет скачать или восстановить.",
+    "GPS app for runners and cyclists Zdrava": "GPS-приложение для бегунов и велосипедистов Zdrava",
+    "With Zdrava, you can track your runs and rides via GPS, complete fun challenges, share training photos, and make new friends.": "С помощью Zdrava вы можете отслеживать свои пробежки и поездки с помощью GPS, выполнять веселые задания, делиться фотографиями тренировок и заводить новых друзей."
 }
