--- a/lang/ru.json
+++ b/lang/ru.json
@@ -122,7 +122,7 @@
     "Gone": "Удалено",
     "GPS app for runners and cyclists Zdrava": "GPS-приложение для бегунов и велосипедистов Zdrava",
     "Hello!": "Здравствуйте!",
-    "Hello! Thank you for signing up.": "Привет! Спасибо за регистрацию.",
+    "Hello! Thank you for signing up.": "Приветствуем! Спасибо за регистрацию.",
     "Hide": "Скрыть",
     "Hide :name": "Скрыть :name",
     "Home": "На главную",
