API: Improve login process

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -356,6 +356,7 @@
     "Variant Also Negotiates": "Вариант тоже проводит согласование",
     "Verify email": "Подтвердить почту",
     "Verify Email Address": "Подтвердить адрес электронной почты",
+    "Please verify your email address": "Пожалуйста подтвердите ваш адрес электронной почты",
     "Version history": "История версий",
     "View": "Просмотр",
     "View :name": "Посмотреть :name",
