Site: Change link to mobile app page

--- a/lang/ru.json
+++ b/lang/ru.json
@@ -84,7 +84,7 @@
     "Download": "Скачать",
     "Download :file": "Скачать :file",
     "Download segment as FIT": "Скачать сегмент как FIT",
-    "Download Zdrava :version for android": "Скачать Zdrava :version для android",
+    "Download Zdrava for android": "Скачать Zdrava для android",
     "Duplicate": "Дублировать",
     "Duplicate :name": "Дублировать :name",
     "Duration": "Время",
