--- a/lang/ru.json
+++ b/lang/ru.json
@@ -302,8 +302,8 @@
     "Subscription requests: :count": "Запросы на подписку: :count",
     "Subscriptions": "Подписки",
     "Successful created user. Please check inbox and confirm your email.": "Пользователь успешно создан. Пожалуйста, проверьте почтовый ящик и подтвердите свой адрес электронной почты.",
-    "Successfully subscribed to \":user\"": "Вы подписались на \":user\"",
-    "Successfully unsubscribed from \":user\"": "Вы успешно отписались от \":user\"",
+    "Successfully subscribed to ':user'": "Вы подписались на ':user'",
+    "Successfully unsubscribed from ':user'": "Вы успешно отписались от ':user'",
     "Support the developer": "Поддержите разработчика",
     "Switch": "Переключить",
     "Switch To Role": "Переключиться на роль",
@@ -384,5 +384,7 @@
     "Your provided credentials do not match in our records": "Предоставленные вами учетные данные не совпадают с нашими записями",
     "Your tasks": "Ваши задачи",
     "Zdrava account deleting": "Удаление аккаунта Zdrava",
-    "Zdrava android app": "Zdrava для android"
+    "Zdrava android app": "Zdrava для android",
+    "No results found for ':query'": "Нет результатов для запроса ':query'",
+    "You already subscribed to this user": "Вы уже подписаны на этого пользователя"
 }
